--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    Stefan
     <div id="canvas-container"></div>
   </body>
 </html>
